# subscriptions

./: .gitignore  Cargo.toml  configuration.yaml  recipe.json
.github/: general.yml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
migrations/: 20220610160309_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
