[package]
edition = "2021"
name = "subscription"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "subscription"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = "0.4.15"
config = "0.13"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "0.8.2", features = ["v4"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.5.13"

[dev-dependencies]
reqwest = "0.11"
